--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
 
 <head>
-    <title>Hello!</title>
+    <title>my story</title>
 </head>
 
 <body>
-    <h1>Hello, World!</h1>
-</body>
+    <h1>Hamida Hassan Ali <br>
+    hamidahassan12345@gmail.com </h1>
+    <p>im hamida hassan ilive at fuon im a student of zanzibar unversity at a chwaka compus in course of information technology with account</p>
+    <h2>my subject</h2>
+    <ol>
+      <li>accountig</li>  
+        <li>quick book</li>
+        <li>IT</li>
+    </ol>
+    <h3>COURSE</h3>
+        <ul>
+            <li>BITA</li>
+            <li>BBF</li>
+            <li>BAF</li> 
+        </ul>
+    </body>
 
 </html>
